@@ -12,7 +12,7 @@
     <script type="text/javascript" src="/js/scw.js"></script>
     <script type="text/javascript" src="/js/prototype.js"></script>
     <script type="text/javascript" src="/js/scriptaculous.js"></script>
-    <script type="text/javascript" src="/openflights.js?version=20090112"></script>
+    <script type="text/javascript" src="/openflights.js?version=20090115"></script>
   </head>
 
   <body>
@@ -31,7 +31,7 @@
 
 	    <div id="news" style="display: none">
 	      <img src="/img/close.gif" height=17 width=17 onClick='JavaScript:closeNews()'> 
-	      <B>News</b>: 12 Jan 2009: <a href="/about.html#CHANGES">Login security improved.<br>Please report any problems logging in or changing password.</a>
+	      <B>News</b>: 15 Jan 2009: <a href="/about.html#CHANGES">Username no longer case sensitive for new accounts or after password change.<br>Please report any problems logging in or changing password.</a>
 	    </div>
 	    
 	    <div id="ajaxloader">
